mmdd: Automatically compute hover color for menu without custom hover color + a z-index fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10741 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/main-menu-drop-down.css
+++ b/content/resources/css/main-menu-drop-down.css
@@ -101,7 +101,7 @@ html[data-theme="simple"] .ft-drop-down-submenu {
 } 
 
 /*those icons in top right corner, settings thingy*/
-.backIcon, .statsIcon, .alltidIcon, .bookmark, .forumSettings, .forumSearch, .forumSearch2, .forumStats, .backIcon2, .helpIcon {
+.copyicon, .backIcon, .statsIcon, .alltidIcon, .bookmark, .forumSettings, .forumSearch, .forumSearch2, .forumStats, .backIcon2, .helpIcon {
 	z-index: 0 !important;
 }
 
